# demo-OpenCv

./: README.md
OpenCvTestApplication/app/: build.gradle
OpenCvTestApplication/app/src/androidTest/java/com/example/opencvtestapplication/: ExampleInstrumentedTest.java
OpenCvTestApplication/app/src/main/: AndroidManifest.xml
OpenCvTestApplication/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h  utils.cpp  utils.h
OpenCvTestApplication/app/src/main/java/com/example/opencvtestapplication/: MainActivity.java
OpenCvTestApplication/app/src/main/res/layout/: activity_main.xml
OpenCvTestApplication/app/src/main/res/values/: strings.xml
OpenCvTestApplication/app/src/test/java/com/example/opencvtestapplication/: ExampleUnitTest.java
OpenCvTestApplication/gradle/wrapper/: gradle-wrapper.properties
